projects isotope flicker fix

--- a/themes/adapt/css/style.less
+++ b/themes/adapt/css/style.less
@@ -2505,7 +2505,6 @@ a.pdf {
 	margin: 0 1% 2% 0;
 	height: auto;
 	width: 32%;
-	.transition-all(0.2s);
 	&:nth-child(3n+3) {
 // 		margin-right: 0;
 	}
@@ -3974,7 +3973,6 @@ a.footer_twitter:hover {
 /*-----------------------------------------------------------------------------------*
 /* Main Shortcodes
 /*-----------------------------------------------------------------------------------*/
-
 /*columns*/
 .one-half{ width:48%; }
 .one-third{ width:30.66%; }
@@ -3987,11 +3985,8 @@ a.footer_twitter:hover {
 	position:relative; margin-right:4%; float:left;
 }
 
-
 .column-last{margin-right: 0px;}
 .column-first{margin-left: 0px;}
-
-
 
 /*Other buttons*/
 .button {
@@ -4010,43 +4005,4 @@ a.footer_twitter:hover {
 .button.active { top: 1px }
 .button.black {
 	background-color: #333333;
-}
-
-/* Isotope CSS Animations
-================================================== */
-.isotope,
-.isotope .isotope-item {
-  -webkit-transition-duration: 0.6s;
-     -moz-transition-duration: 0.6s;
-      -ms-transition-duration: 0.6s;
-       -o-transition-duration: 0.6s;
-          transition-duration: 0.6s;
-}
-
-.isotope {
-  -webkit-transition-property: height, width;
-     -moz-transition-property: height, width;
-      -ms-transition-property: height, width;
-       -o-transition-property: height, width;
-          transition-property: height, width;
-}
-
-.isotope .isotope-item {
-  -webkit-transition-property: -webkit-transform, opacity;
-     -moz-transition-property:    -moz-transform, opacity;
-      -ms-transition-property:     -ms-transform, opacity;
-       -o-transition-property:         top, left, opacity;
-          transition-property:         transform, opacity;
-}
-
-/**** disabling Isotope CSS3 transitions ****/
-
-.isotope.no-transition,
-.isotope.no-transition .isotope-item,
-.isotope .isotope-item.no-transition {
-  -webkit-transition-duration: 0s;
-     -moz-transition-duration: 0s;
-      -ms-transition-duration: 0s;
-       -o-transition-duration: 0s;
-          transition-duration: 0s;
 }
